fazladan yazılmış karakter silindi

--- a/ilk internet sitesi/index.html
+++ b/ilk internet sitesi/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> İlk internet sitem </h1>>
+    <h1> İlk internet sitem </h1>
 </body>
 </html>
