--- a/ilk internet sitesi/index.html
+++ b/ilk internet sitesi/index.html
@@ -7,6 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> İlk internet sitem </h1>
+    <h1>Ethem Fırat Alikan </h1>
+    
+    <h2>Hakkımda</h2>
+    <!-- hakkımda kısmının texti başlangıcı -->
+    <p>Kocaeli Üniversitesi biyomedikal mühendisliğini bırakıp farklı alanlara yöneldim. <br> 
+    Önce kripto dünyasında yer edinmeye çalıştım ordan belli bir gelir elde ettikten sonra <br>
+    işin stresinden dolayı bırakıp gemi inşa mühendisi bir arkadaşımla beraber yazılım çalışmaya
+    başladık.</p>
+    <!--hakkımda kısmının text bitişi  -->
+    <h2>Sevdiğim diziler</h2>
+    <!-- burada dizileri sayılı bir şekilde listeledim -->
+    <ol>
+<li>Breaking bad</li>
+<li>Better call saul</li>
+<li>Ezel</li>
+<li>Leyla İle Mecnun</li>
+<li>Altered Carbon</li>    
+<li>Ozark</li>
+<li>11.22.63</li>
+<li>Carnival Row</li>
+<li>Narcos</li>
+<li>The Magicians</li>
+</ol>
+<a href="https://www.instagram.com/ethemalikan/">instagram adresim </a>
+<p>mail adresim : ethem_alikan@hotmail.com</p>
+
+
+
+
+
+
 </body>
 </html>
