instagram butonu eklendi

--- a/ilk internet sitesi/index.html
+++ b/ilk internet sitesi/index.html
@@ -29,12 +29,10 @@
 <li>Carnival Row</li>
 <li>Narcos</li>
 <li>The Magicians</li>
-</ol>
-<a href="https://www.instagram.com/ethemalikan/">instagram adresim </a>
+
+  </ol>
 <p>mail adresim : ethem_alikan@hotmail.com</p>
-
-
-
+<button><a href="https://www.instagram.com/ethemalikan/"> instagram adresim </a></button>
 
 
 
