button farklı sekmede açılması yapıldı

--- a/ilk internet sitesi/index.html
+++ b/ilk internet sitesi/index.html
@@ -32,7 +32,7 @@
 
   </ol>
 <p>mail adresim : ethem_alikan@hotmail.com</p>
-<button><a href="https://www.instagram.com/ethemalikan/"> instagram adresim </a></button>
+<button><a href="https://www.instagram.com/ethemalikan/" target="_blank"> instagram adresim </a></button>
 
 
 
