--- a/ilk internet sitesi/index.html
+++ b/ilk internet sitesi/index.html
@@ -29,12 +29,10 @@
 <li>Carnival Row</li>
 <li>Narcos</li>
 <li>The Magicians</li>
-
+<!-- burada instagram adresi linki var -->
   </ol>
 <p>mail adresim : ethem_alikan@hotmail.com</p>
-<button><a href="https://www.instagram.com/ethemalikan/" target="_blank"> instagram adresim </a></button>
-
-
+<button><a href="https://www.instagram.com/ethemalikan/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" width="30px"> </a></button>
 
 </body>
 </html>
