--- a/ilk internet sitesi/deneme.html
+++ b/ilk internet sitesi/deneme.html
@@ -1,9 +1,23 @@
-<ul style="list-style-type:square">
-<li>kaşar</li>
-<li>eski kaşar</li>
-<li>dil peyniri</li>
+<!DOCTYPE html>
+ <html lang="en">
+ <head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+ </head>
+ <body>
+   <ul style="list-style-type:square">
+      <li>kaşar</li>
+      <li>eski kaşar</li>
+      <li>dil peyniri</li>
+      
+      </ul>
+       <ul>
+          <li>Lorem, ipsum dolor.</li>
+       </ul>
 
-</ul>
- <ul>
-    <li>Lorem, ipsum dolor.</li>
- </ul>
+
+       <a href="index.html">ana sayfaya dön</a>
+ </body>
+ </html>
