farklı klasöre taşındı

--- a/ilk internet sitesi/denemeler/kendinianlat.html
+++ b/ilk internet sitesi/denemeler/kendinianlat.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Ethem Fırat Alikan Kimdir?</h1>
 <br>
-<img src="C:\Users\ethem\OneDrive\Masaüstü\projeler\ilk internet sitesi\1.jpg"     alt="fotoğrafım"title="ethem fırat alikan"
+<img src="C:\Users\ethem\OneDrive\Masaüstü\projeler\ilk internet sitesi\denemeler\1.jpg"     alt="fotoğrafım"title="ethem fırat alikan"
 width="150" height="200">   
 <!-- ben kimim başlangıç -->
 <p>  
