--- a/ilk internet sitesi/denemeler/kendinianlat.html
+++ b/ilk internet sitesi/denemeler/kendinianlat.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Ethem Fırat Alikan Kimdir?</h1>
 <br>
-<img src="C:\Users\ethem\OneDrive\Masaüstü\projeler\ilk internet sitesi\denemeler\1.jpg"     alt="fotoğrafım"title="ethem fırat alikan"
-width="150" height="200">   
+<img src="/ilk internet sitesi/denemeler/1.JPG"     alt="fotoğrafım"title="ethem fırat alikan"
+width="300" height="400">   
 <!-- ben kimim başlangıç -->
 <p>  
 
